force-app/main/default/objects/ARF_Email_Sender_Map__c/ARF_Email_Sender_Map__c.object-meta.xml
<CustomObject>
    <description>Maps confirmed email senders to Accounts. Learned from manual assignments and used for auto-matching future emails.</description>
    <label>Email Sender Map</label>
    <nameField>
        <displayFormat>ESM-{0000}</displayFormat>
        <label>Sender Map Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Sender Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>