force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The confirmed Account for this sender</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Sender Maps</relationshipLabel>
    <relationshipName>Email_Sender_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>