force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Confidence score for this sender mapping. Starts at 90%, grows with usage (cap 99%)</description>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>