force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Last_Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Match_Date__c</fullName>
    <description>Last time this mapping was used for auto-matching</description>
    <label>Last Match Date</label>
    <type>DateTime</type>
</CustomField>