force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Match_Count__c.field-meta.xml
<CustomField>
    <fullName>Match_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this mapping was used for auto-matching</description>
    <label>Match Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>