force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Sender_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sender_Domain__c</fullName>
    <description>Extracted domain from the sender email address</description>
    <label>Sender Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>