force-app/main/default/objects/ARF_Email_Sender_Map__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>Full email address of the sender</description>
    <externalId>true</externalId>
    <label>Sender Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>